Fix mobile spacing

--- a/src/app/components/TypeWheel.module.scss
+++ b/src/app/components/TypeWheel.module.scss
@@ -17,11 +17,11 @@
     transform-origin: 50% 50%;
     transform: rotate(var(--rotate-deg, 0deg));
     transition: transform 0.2s ease-out;
-    height: 22rem;
-    width: 22rem;
+    height: 50vh; // 50% of viewport height
+    width: 50vw; // 50% of viewport width
     @media (max-width: 480px) {
-      width: 0.8rem;
-      height: 0.8rem;
+      width: 80vw; // 80% of viewport width
+      height: 80vh; // 80% of viewport height
     }
   }
 }
