--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -12,7 +12,6 @@
     padding-top: 1rem;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 2rem;
   }
 }
 
